tests/baselines/reference/invalidContinueInDownlevelAsync.errors.txt
invalidContinueInDownlevelAsync.ts(3,9): error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.


==== invalidContinueInDownlevelAsync.ts (1 errors) ====
    async function func() {
        if (true) {
            continue;
            ~~~~~~~~~
!!! error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.
        }
        else {
            await 1;
        }
    }